--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pvc-deployment-nfs2
+  name: pvc-myapp2
 spec:
   accessModes:
     - ReadWriteMany  # In this example, multiple Pods consume the same PVC.
@@ -38,5 +38,5 @@ spec:
       volumes:
         - name: nfs
           persistentVolumeClaim:
-            claimName: pvc-deployment-nfs2
+            claimName: pvc-myapp2
 
