--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -8,7 +8,7 @@ spec:
   resources:
     requests:
       storage: 1Mi 
-  storageClassName: nfs-csi
+  storageClassName: nfs3
 ---
 apiVersion: apps/v1
 kind: Deployment
